frontend/src/styles/index.scss
/* ... */
.editor {
	background-color: $bg-300;
	flex: 1;
	border: solid 1px $sep-500;
	padding: 4px;
	white-space: pre-wrap;
	overflow-y: auto;

	&.disabled {
		background-color: $bg-400;
	}

	& .placeholder {
		position: absolute;
		color: $fg-400;
	}

	& .syn {
		color: $fg-500;
	}
}

h1 {
	font-size: 1.5rem;
}

h2 {
	font-size: 1.5rem;
}

h3 {
	font-size: 1.3rem;
}

b,
strong {
	font-weight: bold;
}

s {
	text-decoration: line-through;
}

li,
p {
	white-space: pre-wrap;
}

pre,
code {
	background-color: $bg-200;
	font-family: var(--font-mono);
}

pre {
	overflow-x: auto;
	padding: 4px;
	white-space: pre;
}

a {
	color: $link-500;
	cursor: pointer;

	&:hover {
		text-decoration: underline;
	}
}

.underline-links a {
	text-decoration: underline;
}

.select-all {
	user-select: all;
}

em {
	font-style: italic;
}

.markdown {
	white-space: collapse;

	li,
	p {
		white-space: pre-wrap;
	}

	& ul,
	ol {
		white-space: normal;

		& ul,
		ol {
			margin-left: 1rem;
		}
	}

	& li {
		list-style-position: inside;
	}

	& ul > li {
		list-style-type: disc;
	}

	& ol > li {
		list-style-type: numbered;
	}
}

.modal {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: grid;
	place-items: center;

	& > .bg {
		position: absolute;
		animation: popup-bg 120ms linear forwards;
		width: 100%;
		height: 100%;
	}

	& > .content {
		position: absolute;

		& > .base {
			position: absolute;
			animation: popup-base 150ms cubic-bezier(0.42, 1.31, 0.52, 1.09) forwards;
			background-color: $bg-200;
			border: solid 1px $sep-500;
			width: 100%;
			height: 100%;
		}

		& > .inner {
			animation: popup-content 100ms cubic-bezier(0.33, 1.05, 0.39, 0.92)
				forwards;
			padding: 8px;
			color: $fg-300;
			max-width: 500px;
			min-width: 100px;
			min-height: 50px;
		}
	}
}

.contextmenu {
	position: fixed;
	pointer-events: none;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow-y: auto;
	scrollbar-width: none;
	z-index: 1;

	& > .inner {
		position: absolute;
		pointer-events: auto;
		padding-bottom: 8px;
	}
}

menu {
	background-color: $bg-300;
	border: solid 1px $sep-500;
	box-shadow: 2px 2px 8px $bg-100;
	color: $fg-400;
	overflow: hidden;
	min-width: 128px;

	& button {
		border: none;
		padding: 2px 8px;
		width: 100%;
		text-align: left;

		&:hover,
		&:focus {
			background-color: oklch(var(--color-bg1) / 0.5);
		}
	}

	& .submenu {
		padding: 0 8px;
		width: max-content;
	}

	& .subtext {
		color: $fg-500;
		font-size: 0.8rem;
		margin-top: -4px;
	}

	& hr {
		border: none;
		height: 1px;
		background-color: $bg-400;
	}
}

input[type="text"],
input[type="url"] {
	background-color: $bg-300;
	border: solid 1px $sep-500;
}

.settings {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	display: grid;
	grid-template-rows: auto 1fr;
	grid-template-columns: 144px 1fr;

	& > header {
		grid-column: span 2 / span 2;
		background-color: $bg-300;
		border-bottom: solid 1px $sep-500;
		padding: 0.5rem;
	}

	& > nav {
		background-color: $bg-300;
		padding: 0.25rem;

		& button {
			width: 100%;
			background-color: none;

			&:hover,
			&:focus {
				background-color: $bg-400;
			}

			&.selected {
				background-color: $bg-300;
			}
		}
	}

	& > main {
		&.padded {
			padding: 0.25rem;
		}

		overflow-y: auto;
	}

	& button.spaced {
		margin-left: 4px;
	}
}

article.message {
	display: grid;
	grid-template-columns: 128px 1fr max-content;

	&:hover {
		& > * {
			background-color: oklch(var(--color-bg1) / 0.3);
		}

		& > time {
			visibility: visible;
		}
	}

	&.reply {
		/* grid-template-rows: auto auto; */
	}

	& .author {
		@include truncate;
		cursor: pointer;
		color: $fg-400;
		text-align: right;
		padding: 0 8px;

		&:hover,
		&:focus {
			text-decoration: underline;
		}

		&.override-name {
			color: #9ca9db;
		}
	}

	& .sticky {
		position: sticky;
		top: 4px;
	}

	& > .reply {
		color: $fg-500;
		font-size: 0.8rem;
		cursor: pointer;
		grid-column: 1 / span 3;
		display: grid;
		grid-template-columns: 128px 1fr;

		&:hover {
			color: $fg-400;
		}

		& > .arrow {
			display: grid;
			place-items: center;
			justify-content: end;

			& > svg {
				height: 1em;
				margin-right: 8px;
				stroke: $sep-800;
				fill: none;
			}
		}

		& > .content {
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
			padding-right: 4em;

			& > .user {
				color: $fg-300;
				padding-right: 4px;
			}
		}
	}

	& > .content {
		padding-right: 8px;
		display: flex;
		flex-direction: column;
		align-items: start;
		min-width: 0;

		& > .body {
			overflow: hidden;
			max-width: 100%;

			&.local {
				color: $fg-500;
			}
		}

		& .edited {
			color: $fg-500;
			font-size: 0.8rem;
			cursor: pointer;
		}
	}

	& > time {
		visibility: hidden;
		color: $fg-400;
	}
}

.dim {
	color: $fg-500;
	font-size: 0.8rem;
}

.tooltip {
	top: 0;
	left: 0;
	display: grid;
	place-items: center;

	& > .base {
		position: absolute;
		background-color: $bg-200;
		border: solid 1px $sep-500;
		animation: popup-base 150ms cubic-bezier(0.42, 1.31, 0.52, 1.09) forwards;
		width: 100%;
		height: 100%;
	}

	& > .inner {
		padding: 8px;
		color: $fg-300;
		animation: popup-content 100ms cubic-bezier(0.33, 1.05, 0.39, 0.92)
			forwards;
		max-width: 500px;
		min-width: 100px;
		min-height: 1rem;
	}

	&.interactive {
		padding: var(--padding);
		margin: calc(-1 * var(--padding));

		& > .base {
			height: calc(100% - var(--padding) * 2);
			width: calc(100% - var(--padding) * 2);
		}
	}

	&:not(.animate) {
		& > .base {
			animation-duration: 0s;
		}

		& > .inner {
			animation-duration: 0s;
		}
	}
}

#overlay {
	position: fixed;
	z-index: 1;
}
/* ... */

